# hyena-dna-terminator

./: .gitignore  Dockerfile  LICENSE  README.md  [1a]_generate_embeds.py  [2]_hyena_data_process.ipynb  [3]_kfold_swarmplot.ipynb  checkpoint_evals.py  huggingface.py  pyproject.toml  requirements.txt
checkpoints/hyenadna-tiny-1k-seqlen/: config.json
hyenadnaterminator/utils/: n50c_ds_loader.py
tests/: test_standard_ds_loader.py
utils/: checkpoint_evals.py  epoch_eval.py  optimal_model_test.py  remove_similar_seqs.py  seq_processer.py  standard_ds_loader.py  transform_datasets.py
